[gd_scene load_steps=4 format=3 uid="uid://birv6x0nxbgsj"]

[ext_resource type="Script" path="res://scenes/machines/machine_purchase_screen.gd" id="1_2ag62"]
[ext_resource type="PackedScene" uid="uid://dupgcnigmqek2" path="res://scenes/machines/machine.tscn" id="2_47uqd"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_678e5"]
content_margin_left = 30.0
content_margin_top = 30.0
content_margin_right = 30.0
content_margin_bottom = 30.0

[node name="MachinePurchaseScreen" type="ColorRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0.784314)
script = ExtResource("1_2ag62")

[node name="CurrentMachines" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.2
anchor_top = 0.2
anchor_right = 0.8
anchor_bottom = 0.8
offset_left = -0.400009
offset_top = 0.399994
offset_right = 0.399963
offset_bottom = 2.59998
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CurrentMachines"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_678e5")

[node name="VBoxContainer" type="VBoxContainer" parent="CurrentMachines/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 15

[node name="HBoxContainer" type="HBoxContainer" parent="CurrentMachines/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Back" type="Button" parent="CurrentMachines/PanelContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Back"

[node name="Purchase" type="Button" parent="CurrentMachines/PanelContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Purchase new"

[node name="ScrollContainer" type="ScrollContainer" parent="CurrentMachines/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Labels" type="VBoxContainer" parent="CurrentMachines/PanelContainer/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 15

[node name="PurchaseMachines" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.2
anchor_top = 0.2
anchor_right = 0.8
anchor_bottom = 0.8
offset_left = -0.400009
offset_top = 0.399994
offset_right = 0.399963
offset_bottom = 2.59998
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="PurchaseMachines"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_678e5")

[node name="VBoxContainer" type="VBoxContainer" parent="PurchaseMachines/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 15

[node name="Back" type="Button" parent="PurchaseMachines/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Back"

[node name="ScrollContainer" type="ScrollContainer" parent="PurchaseMachines/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="PurchaseLabels" type="VBoxContainer" parent="PurchaseMachines/PanelContainer/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 15

[node name="Machines" type="Node" parent="."]

[node name="Planter" parent="Machines" instance=ExtResource("2_47uqd")]
delta_temperature_level = -0.02
delta_oxygen_level = 0.02
delta_carbon_dioxide_level = -0.02
delta_water_to_land_ratio = -0.01
delta_cost = 1000
upfront_cost = 10000

[node name="Timer" parent="Machines/Planter" index="0"]
wait_time = 6.0

[node name="Factory" parent="Machines" instance=ExtResource("2_47uqd")]
delta_temperature_level = 0.02
delta_oxygen_level = -0.01
delta_carbon_dioxide_level = 0.02
delta_water_to_land_ratio = -0.01
delta_cost = 800
upfront_cost = 10000

[node name="Timer" parent="Machines/Factory" index="0"]
wait_time = 7.0

[node name="Carbon Capture" parent="Machines" instance=ExtResource("2_47uqd")]
delta_temperature_level = 0.01
delta_carbon_dioxide_level = -0.02
delta_cost = 2000
upfront_cost = 15000

[node name="Timer" parent="Machines/Carbon Capture" index="0"]
wait_time = 5.0

[node name="Water Synthesizer" parent="Machines" instance=ExtResource("2_47uqd")]
delta_temperature_level = 0.01
delta_oxygen_level = -0.01
delta_carbon_dioxide_level = -0.01
delta_water_to_land_ratio = 0.02
delta_cost = 1500
upfront_cost = 20000

[node name="Timer" parent="Machines/Water Synthesizer" index="0"]
wait_time = 5.0

[node name="Water Absorber" parent="Machines" instance=ExtResource("2_47uqd")]
delta_temperature_level = 0.01
delta_oxygen_level = 0.01
delta_carbon_dioxide_level = 0.02
delta_water_to_land_ratio = -0.02
delta_cost = 1800
upfront_cost = 20000

[node name="Timer" parent="Machines/Water Absorber" index="0"]
wait_time = 7.0

[connection signal="pressed" from="CurrentMachines/PanelContainer/VBoxContainer/HBoxContainer/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="CurrentMachines/PanelContainer/VBoxContainer/HBoxContainer/Purchase" to="." method="_on_purchase_pressed"]
[connection signal="pressed" from="PurchaseMachines/PanelContainer/VBoxContainer/Back" to="." method="_on_purchase_back_pressed"]

[editable path="Machines/Planter"]
[editable path="Machines/Factory"]
[editable path="Machines/Carbon Capture"]
[editable path="Machines/Water Synthesizer"]
[editable path="Machines/Water Absorber"]
